# auth-server

./: README.md  init.sql  main.py  pyproject.toml
.github/workflows/: python-CI.yml
auth/: __main__.py  authjs.py  entrypoint.py  middleware.py  settings.py
auth/adapters/: __init__.py  accounts.py  backend.py  emails.py  repository.py  schemas.py  sessions.py  setup.py  users.py  utils.py
auth/applications/: authjs.py
auth/controllers/: api.py  cqs.py  dependencies.py  middleware.py  settings.py  transport.py
auth/controllers/routers/: cqs.py
auth/domain/: __init__.py  accounts.py  aggregate.py  emails.py  models.py  ports.py  sessions.py  users.py
auth/endpoints/: cqs.py
auth/services/: __init__.py  exceptions.py  messagebus.py  messages.py  schemas.py  service.py
auth/services/authjs/: __init__.py  commands.py  exceptions.py  handlers.py  queries.py  schemas.py  service.py
server/: __main__.py  connections.py  entrypoint.py  middleware.py  schemas.py  settings.py
server/adapters/: credentials.py  emails.py  schemas.py  sessions.py  users.py
server/endpoints/: authentication.py  forms.py  registration.py
server/ports/: clients.py  credentials.py  emails.py  sessions.py  users.py
server/services/: authentication.py  registration.py
server/static/: styles.css
server/templates/: sign-in.html  sign-up.html
tests/: conftest.py  test_adapters.py  test_endpoints.py  test_tokens.py
tests/authjs/: _test_handlers.py  conftest.py  test_endpoints.py  test_handlers.py
